Spring/src/Spring/src/Grammar/gen/GHaskellParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /Users/alexkane/study/spring-lang/Spring/src/Spring/src/Grammar/GHaskellParser.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class GHaskellParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		NEWLINE=1, TAB=2, WS=3, COMMENT=4, NCOMMENT=5, OCURLY=6, CCURLY=7, VOCURLY=8, 
		VCCURLY=9, SEMI=10, CASE=11, CLASS=12, DATA=13, DEFAULT=14, DERIVING=15, 
		DO=16, ELSE=17, EXPORT=18, FOREIGN=19, IF=20, IMPORT=21, IN=22, INFIX=23, 
		INFIXL=24, INFIXR=25, INSTANCE=26, LET=27, MODULE=28, NEWTYPE=29, OF=30, 
		THEN=31, TYPE=32, WHERE=33, WILDCARD=34, QUALIFIED=35, AS=36, HIDING=37, 
		LANGUAGE=38, INLINE=39, NOINLINE=40, SPECIALIZE=41, CCALL=42, STDCALL=43, 
		CPPCALL=44, JVMCALL=45, DOTNETCALL=46, SAFE=47, UNSAFE=48, DoubleArrow=49, 
		DoubleColon=50, Arrow=51, Revarrow=52, Hash=53, Less=54, Greater=55, Ampersand=56, 
		Pipe=57, Bang=58, Caret=59, Plus=60, Minus=61, Asterisk=62, Percent=63, 
		Divide=64, Tilde=65, Atsign=66, Dollar=67, Dot=68, Semi=69, DoubleDot=70, 
		QuestionMark=71, OpenRoundBracket=72, CloseRoundBracket=73, OpenSquareBracket=74, 
		CloseSquareBracket=75, OpenCommentBracket=76, CloseCommentBracket=77, 
		Comma=78, Colon=79, Eq=80, Quote=81, DoubleQuote=82, BackQuote=83, CHAR=84, 
		STRING=85, VARID=86, CONID=87, DECIMAL=88, OCTAL=89, HEXADECIMAL=90, FLOAT=91, 
		EXPONENT=92, ASCSYMBOL=93, UNISYMBOL=94;
	public const int
		RULE_varid = 0, RULE_conid = 1, RULE_ascSymbol = 2, RULE_varsym = 3, RULE_consym = 4, 
		RULE_con = 5, RULE_varop = 6, RULE_conop = 7, RULE_op = 8, RULE_module = 9, 
		RULE_tycon = 10, RULE_atype = 11, RULE_type = 12, RULE_constr = 13, RULE_constrs = 14, 
		RULE_simpletype = 15, RULE_var = 16, RULE_vars = 17, RULE_gendecl = 18, 
		RULE_integer = 19, RULE_pfloat = 20, RULE_pchar = 21, RULE_pstring = 22, 
		RULE_literal = 23, RULE_apat = 24, RULE_funlhs = 25, RULE_lexp = 26, RULE_qop = 27, 
		RULE_exp = 28, RULE_rhs = 29, RULE_decl = 30, RULE_topdecl = 31;
	public static readonly string[] ruleNames = {
		"varid", "conid", "ascSymbol", "varsym", "consym", "con", "varop", "conop", 
		"op", "module", "tycon", "atype", "type", "constr", "constrs", "simpletype", 
		"var", "vars", "gendecl", "integer", "pfloat", "pchar", "pstring", "literal", 
		"apat", "funlhs", "lexp", "qop", "exp", "rhs", "decl", "topdecl"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, "'{'", "'}'", "'VOCURLY'", "'VCCURLY'", 
		"'SEMI'", "'case'", "'class'", "'data'", "'default'", "'deriving'", "'do'", 
		"'else'", "'export'", "'foreign'", "'if'", "'import'", "'in'", "'infix'", 
		"'infixl'", "'infixr'", "'instance'", "'let'", "'module'", "'newtype'", 
		"'of'", "'then'", "'type'", "'where'", "'_'", "'qualified'", "'as'", "'hiding'", 
		"'LANGUAGE'", "'INLINE'", "'NOINLINE'", "'SPECIALIZE'", "'ccall'", "'stdcall'", 
		"'cplusplus'", "'jvm'", "'dotnet'", "'safe'", "'unsafe'", "'=>'", "'::'", 
		"'->'", "'<-'", "'#'", "'<'", "'>'", "'&'", "'|'", "'!'", "'^'", "'+'", 
		"'-'", "'*'", "'%'", "'/'", "'~'", "'@'", "'$'", "'.'", "';'", "'..'", 
		"'?'", "'('", "')'", "'['", "']'", "'{-#'", "'#-}'", "','", "':'", "'='", 
		"'''", "'\\'", "'`'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "NEWLINE", "TAB", "WS", "COMMENT", "NCOMMENT", "OCURLY", "CCURLY", 
		"VOCURLY", "VCCURLY", "SEMI", "CASE", "CLASS", "DATA", "DEFAULT", "DERIVING", 
		"DO", "ELSE", "EXPORT", "FOREIGN", "IF", "IMPORT", "IN", "INFIX", "INFIXL", 
		"INFIXR", "INSTANCE", "LET", "MODULE", "NEWTYPE", "OF", "THEN", "TYPE", 
		"WHERE", "WILDCARD", "QUALIFIED", "AS", "HIDING", "LANGUAGE", "INLINE", 
		"NOINLINE", "SPECIALIZE", "CCALL", "STDCALL", "CPPCALL", "JVMCALL", "DOTNETCALL", 
		"SAFE", "UNSAFE", "DoubleArrow", "DoubleColon", "Arrow", "Revarrow", "Hash", 
		"Less", "Greater", "Ampersand", "Pipe", "Bang", "Caret", "Plus", "Minus", 
		"Asterisk", "Percent", "Divide", "Tilde", "Atsign", "Dollar", "Dot", "Semi", 
		"DoubleDot", "QuestionMark", "OpenRoundBracket", "CloseRoundBracket", 
		"OpenSquareBracket", "CloseSquareBracket", "OpenCommentBracket", "CloseCommentBracket", 
		"Comma", "Colon", "Eq", "Quote", "DoubleQuote", "BackQuote", "CHAR", "STRING", 
		"VARID", "CONID", "DECIMAL", "OCTAL", "HEXADECIMAL", "FLOAT", "EXPONENT", 
		"ASCSYMBOL", "UNISYMBOL"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GHaskellParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static GHaskellParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GHaskellParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GHaskellParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class VaridContext : ParserRuleContext {
		public ITerminalNode VARID() { return GetToken(GHaskellParser.VARID, 0); }
		public VaridContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varid; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.EnterVarid(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.ExitVarid(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGHaskellParserVisitor<TResult> typedVisitor = visitor as IGHaskellParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarid(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VaridContext varid() {
		VaridContext _localctx = new VaridContext(Context, State);
		EnterRule(_localctx, 0, RULE_varid);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 64; Match(VARID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConidContext : ParserRuleContext {
		public ITerminalNode CONID() { return GetToken(GHaskellParser.CONID, 0); }
		public ConidContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_conid; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.EnterConid(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.ExitConid(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGHaskellParserVisitor<TResult> typedVisitor = visitor as IGHaskellParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConid(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConidContext conid() {
		ConidContext _localctx = new ConidContext(Context, State);
		EnterRule(_localctx, 2, RULE_conid);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66; Match(CONID);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AscSymbolContext : ParserRuleContext {
		public ITerminalNode Bang() { return GetToken(GHaskellParser.Bang, 0); }
		public ITerminalNode Hash() { return GetToken(GHaskellParser.Hash, 0); }
		public ITerminalNode Dollar() { return GetToken(GHaskellParser.Dollar, 0); }
		public ITerminalNode Percent() { return GetToken(GHaskellParser.Percent, 0); }
		public ITerminalNode Ampersand() { return GetToken(GHaskellParser.Ampersand, 0); }
		public ITerminalNode Asterisk() { return GetToken(GHaskellParser.Asterisk, 0); }
		public ITerminalNode Plus() { return GetToken(GHaskellParser.Plus, 0); }
		public ITerminalNode Dot() { return GetToken(GHaskellParser.Dot, 0); }
		public ITerminalNode Divide() { return GetToken(GHaskellParser.Divide, 0); }
		public ITerminalNode Less() { return GetToken(GHaskellParser.Less, 0); }
		public ITerminalNode Eq() { return GetToken(GHaskellParser.Eq, 0); }
		public ITerminalNode Greater() { return GetToken(GHaskellParser.Greater, 0); }
		public ITerminalNode QuestionMark() { return GetToken(GHaskellParser.QuestionMark, 0); }
		public ITerminalNode Atsign() { return GetToken(GHaskellParser.Atsign, 0); }
		public ITerminalNode DoubleQuote() { return GetToken(GHaskellParser.DoubleQuote, 0); }
		public ITerminalNode Caret() { return GetToken(GHaskellParser.Caret, 0); }
		public ITerminalNode Pipe() { return GetToken(GHaskellParser.Pipe, 0); }
		public ITerminalNode Minus() { return GetToken(GHaskellParser.Minus, 0); }
		public ITerminalNode Tilde() { return GetToken(GHaskellParser.Tilde, 0); }
		public ITerminalNode Colon() { return GetToken(GHaskellParser.Colon, 0); }
		public AscSymbolContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ascSymbol; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.EnterAscSymbol(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.ExitAscSymbol(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGHaskellParserVisitor<TResult> typedVisitor = visitor as IGHaskellParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAscSymbol(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AscSymbolContext ascSymbol() {
		AscSymbolContext _localctx = new AscSymbolContext(Context, State);
		EnterRule(_localctx, 4, RULE_ascSymbol);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 68;
			_la = TokenStream.LA(1);
			if ( !(((((_la - 53)) & ~0x3f) == 0 && ((1L << (_la - 53)) & ((1L << (Hash - 53)) | (1L << (Less - 53)) | (1L << (Greater - 53)) | (1L << (Ampersand - 53)) | (1L << (Pipe - 53)) | (1L << (Bang - 53)) | (1L << (Caret - 53)) | (1L << (Plus - 53)) | (1L << (Minus - 53)) | (1L << (Asterisk - 53)) | (1L << (Percent - 53)) | (1L << (Divide - 53)) | (1L << (Tilde - 53)) | (1L << (Atsign - 53)) | (1L << (Dollar - 53)) | (1L << (Dot - 53)) | (1L << (QuestionMark - 53)) | (1L << (Colon - 53)) | (1L << (Eq - 53)) | (1L << (DoubleQuote - 53)))) != 0)) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VarsymContext : ParserRuleContext {
		public AscSymbolContext[] ascSymbol() {
			return GetRuleContexts<AscSymbolContext>();
		}
		public AscSymbolContext ascSymbol(int i) {
			return GetRuleContext<AscSymbolContext>(i);
		}
		public VarsymContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varsym; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.EnterVarsym(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.ExitVarsym(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGHaskellParserVisitor<TResult> typedVisitor = visitor as IGHaskellParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarsym(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VarsymContext varsym() {
		VarsymContext _localctx = new VarsymContext(Context, State);
		EnterRule(_localctx, 6, RULE_varsym);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 71;
			ErrorHandler.Sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					State = 70; ascSymbol();
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				State = 73;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConsymContext : ParserRuleContext {
		public ITerminalNode Colon() { return GetToken(GHaskellParser.Colon, 0); }
		public AscSymbolContext[] ascSymbol() {
			return GetRuleContexts<AscSymbolContext>();
		}
		public AscSymbolContext ascSymbol(int i) {
			return GetRuleContext<AscSymbolContext>(i);
		}
		public ConsymContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_consym; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.EnterConsym(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.ExitConsym(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGHaskellParserVisitor<TResult> typedVisitor = visitor as IGHaskellParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConsym(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConsymContext consym() {
		ConsymContext _localctx = new ConsymContext(Context, State);
		EnterRule(_localctx, 8, RULE_consym);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 75; Match(Colon);
			State = 79;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 76; ascSymbol();
					}
					} 
				}
				State = 81;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,1,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConContext : ParserRuleContext {
		public ConidContext conid() {
			return GetRuleContext<ConidContext>(0);
		}
		public ConContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_con; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.EnterCon(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.ExitCon(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGHaskellParserVisitor<TResult> typedVisitor = visitor as IGHaskellParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCon(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConContext con() {
		ConContext _localctx = new ConContext(Context, State);
		EnterRule(_localctx, 10, RULE_con);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82; conid();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class VaropContext : ParserRuleContext {
		public VarsymContext varsym() {
			return GetRuleContext<VarsymContext>(0);
		}
		public ITerminalNode[] BackQuote() { return GetTokens(GHaskellParser.BackQuote); }
		public ITerminalNode BackQuote(int i) {
			return GetToken(GHaskellParser.BackQuote, i);
		}
		public VaridContext varid() {
			return GetRuleContext<VaridContext>(0);
		}
		public VaropContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_varop; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.EnterVarop(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.ExitVarop(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGHaskellParserVisitor<TResult> typedVisitor = visitor as IGHaskellParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitVarop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public VaropContext varop() {
		VaropContext _localctx = new VaropContext(Context, State);
		EnterRule(_localctx, 12, RULE_varop);
		try {
			State = 89;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Hash:
			case Less:
			case Greater:
			case Ampersand:
			case Pipe:
			case Bang:
			case Caret:
			case Plus:
			case Minus:
			case Asterisk:
			case Percent:
			case Divide:
			case Tilde:
			case Atsign:
			case Dollar:
			case Dot:
			case QuestionMark:
			case Colon:
			case Eq:
			case DoubleQuote:
				EnterOuterAlt(_localctx, 1);
				{
				State = 84; varsym();
				}
				break;
			case BackQuote:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 85; Match(BackQuote);
				State = 86; varid();
				State = 87; Match(BackQuote);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ConopContext : ParserRuleContext {
		public ConsymContext consym() {
			return GetRuleContext<ConsymContext>(0);
		}
		public ITerminalNode[] BackQuote() { return GetTokens(GHaskellParser.BackQuote); }
		public ITerminalNode BackQuote(int i) {
			return GetToken(GHaskellParser.BackQuote, i);
		}
		public ConidContext conid() {
			return GetRuleContext<ConidContext>(0);
		}
		public ConopContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_conop; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.EnterConop(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.ExitConop(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGHaskellParserVisitor<TResult> typedVisitor = visitor as IGHaskellParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitConop(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ConopContext conop() {
		ConopContext _localctx = new ConopContext(Context, State);
		EnterRule(_localctx, 14, RULE_conop);
		try {
			State = 96;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case Colon:
				EnterOuterAlt(_localctx, 1);
				{
				State = 91; consym();
				}
				break;
			case BackQuote:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 92; Match(BackQuote);
				State = 93; conid();
				State = 94; Match(BackQuote);
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OpContext : ParserRuleContext {
		public VaropContext varop() {
			return GetRuleContext<VaropContext>(0);
		}
		public ConopContext conop() {
			return GetRuleContext<ConopContext>(0);
		}
		public OpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_op; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.EnterOp(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.ExitOp(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGHaskellParserVisitor<TResult> typedVisitor = visitor as IGHaskellParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOp(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OpContext op() {
		OpContext _localctx = new OpContext(Context, State);
		EnterRule(_localctx, 16, RULE_op);
		try {
			State = 100;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 98; varop();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 99; conop();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ModuleContext : ParserRuleContext {
		public ITerminalNode Eof() { return GetToken(GHaskellParser.Eof, 0); }
		public TopdeclContext[] topdecl() {
			return GetRuleContexts<TopdeclContext>();
		}
		public TopdeclContext topdecl(int i) {
			return GetRuleContext<TopdeclContext>(i);
		}
		public ITerminalNode[] NEWLINE() { return GetTokens(GHaskellParser.NEWLINE); }
		public ITerminalNode NEWLINE(int i) {
			return GetToken(GHaskellParser.NEWLINE, i);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_module; } }
		public override void EnterRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.EnterModule(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IGHaskellParserListener typedListener = listener as IGHaskellParserListener;
			if (typedListener != null) typedListener.ExitModule(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGHaskellParserVisitor<TResult> typedVisitor = visitor as IGHaskellParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitModule(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ModuleContext module() {
		ModuleContext _localctx = new ModuleContext(Context, State);
		EnterRule(_localctx, 18, RULE_module);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 111;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DATA || _la==VARID) {
				{
				{
				State = 102; topdecl();
				State = 106;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==NEWLINE) {
					{
					{
					State = 103; Match(NEWLINE);
					}
					}
					State = 108;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				}
				State = 113;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 114; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
